[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "treasurycurves"
version = "1.0.0"
authors = [
  { name="Daniel Fryer", email="daniel.fryer@uconn.edu" },
]
description = "query and analyze US Treasury yield data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pepe454/treasury-curves"
"Bug Tracker" = "https://github.com/pepe454/treasury-curves/issues"
